--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   mobile_scanner: ^6.0.10
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
